// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaterialModal should render 1`] = `
<aside class="mdc-dialog" role="alertdialog" style="display: none;">
  <div class="mdc-dialog__surface">
    <footer class="mdc-dialog__footer undefined"></footer>
  </div>
  <div class="mdc-dialog__backdrop"></div>
</aside>
`;

exports[`MaterialModal should render with buttons 1`] = `
<aside class="mdc-dialog" role="alertdialog" style="display: none;">
  <div class="mdc-dialog__surface">
    <footer class="mdc-dialog__footer undefined">
      <button class="mdc-button mdc-dialog__footer__button" type="button">button 1</button>
      <button class="mdc-button mdc-dialog__footer__button" type="button">button 2</button>
    </footer>
  </div>
  <div class="mdc-dialog__backdrop"></div>
</aside>
`;

exports[`MaterialModal should render with content 1`] = `
<aside class="mdc-dialog" role="alertdialog" style="display: none;">
  <div class="mdc-dialog__surface">
    <section class="mdc-dialog__body" id="dummyContent">
      <h1>hello world</h1>
    </section>
    <footer class="mdc-dialog__footer undefined"></footer>
  </div>
  <div class="mdc-dialog__backdrop"></div>
</aside>
`;
